--- a/components/common/tag.scss
+++ b/components/common/tag.scss
@@ -3,5 +3,5 @@
   padding: 0.15em 0.625em 0.1em 0.625em;
   border-radius: $radius-lg;
   color: $white;
-  background-color: $grape;
+  background-color: $persian;
 }
