--- a/components/layout/components/quote-tile.scss
+++ b/components/layout/components/quote-tile.scss
@@ -21,15 +21,15 @@
     content: "“";
     position: absolute;
     left: -0.375em;
-    color: $off-white;
+    color: $khaki;
   }
   &:after {
     content: "”";
-    color: $off-white;
+    color: $khaki;
   }
 }
 
 .quote-author {
   text-align: right;
-  color: $peach;
+  color: $persian;
 }
