--- a/components/layout/components/show-tile.scss
+++ b/components/layout/components/show-tile.scss
@@ -38,11 +38,11 @@
 }
 
 .show-venue {
-  color: $off-white;
+  color: $khaki;
 }
 
 .show-city {
-  color: $peach;
+  color: $persian;
 }
 
 .show-img {
