--- a/components/layout/components/stat.scss
+++ b/components/layout/components/stat.scss
@@ -1,5 +1,5 @@
 .stat {
-  color: $peach;
+  color: $persian;
 
   svg {
     display: inline-block;
@@ -17,5 +17,5 @@
 
 .stat-pre-value {
   font-weight: $bold-weight;
-  color: $off-white;
+  color: $khaki;
 }
