--- a/styles/1-utils/_variables.module.scss
+++ b/styles/1-utils/_variables.module.scss
@@ -24,11 +24,11 @@ $font-size-xs: 0.5rem; // 10px
 //////////////////////////////////
 
 $white: #ffffff;
-$off-white: #e4d9d7;
-$peach: #dfacaf;
-$grape: #3c1e48;
-$violet: #18113c;
-$black: #0f0819;
+$khaki: #b5a398;
+$persian: #df854b;
+$terra-cotta: #993f04;
+$tobacco: #403236;
+$black: #000000;
 
 $aero: #58bad4;
 $aero-light: #85e5ff;
