--- a/styles/2-base/_theme.scss
+++ b/styles/2-base/_theme.scss
@@ -1,10 +1,10 @@
 html {
   background-color: $black;
-  color: $off-white;
+  color: $khaki;
 }
 
 a {
-  color: $peach;
+  color: $persian;
   transition: color 0.2s ease-out;
 
   &:hover,
@@ -33,7 +33,7 @@ a {
 .darkglass {
   text-decoration: none;
   background-color: $black;
-  border: 1px solid $violet;
+  border: 1px solid $tobacco;
   border-radius: $radius-md;
   box-shadow: 0 1px 12px 0 $shadow;
 }
@@ -52,5 +52,5 @@ button:focus:not(:focus-visible),
 
 ::selection {
   color: $white;
-  background-color: rgba($peach, 0.6);
+  background-color: rgba($persian, 0.6);
 }
