--- a/components/layout/components/show-tile.scss
+++ b/components/layout/components/show-tile.scss
@@ -28,7 +28,7 @@
   &[href]:focus {
     & > .show-venue,
     & > .show-city {
-      color: $aero-light;
+      color: $persian-light;
     }
     & + .show-img {
       opacity: 1;
