--- a/styles/1-utils/_variables.module.scss
+++ b/styles/1-utils/_variables.module.scss
@@ -26,12 +26,10 @@ $font-size-xs: 0.5rem; // 10px
 $white: #ffffff;
 $khaki: #b5a398;
 $persian: #df854b;
+$persian-light: #f0b189;
 $terra-cotta: #993f04;
 $tobacco: #403236;
 $black: #000000;
-
-$aero: #58bad4;
-$aero-light: #85e5ff;
 
 $shadow: rgba($black, 0.25);
 
