--- a/styles/2-base/_typography.scss
+++ b/styles/2-base/_typography.scss
@@ -3,15 +3,15 @@
 //////////////////////////////////
 
 html {
-  font-size: 14px;
+  font-size: 13px;
 
   @media (min-width: 900px) {
-    font-size: 16px;
+    font-size: 14px;
   }
   @media (min-width: 1200px) {
     font-size: 18px;
   }
-  @media (min-width: 1400px) {
+  @media (min-width: 1440) {
     font-size: 20px;
   }
 }
