--- a/components/layout/components/text-section.scss
+++ b/components/layout/components/text-section.scss
@@ -1,8 +1,11 @@
+.text-section {
+  padding-top: 0;
+}
+
 .text-section-inner {
-  max-width: 38rem;
+  max-width: 42rem;
   margin-left: auto;
   margin-right: auto;
-  padding: $sp-lg $sp-xl;
 }
 
 .text-section-inner > *:not([class*="u-font-"]) {
@@ -10,6 +13,6 @@
   line-height: 1.5;
 
   &:not(:last-child) {
-    margin-bottom: 1rem;
+    margin-bottom: 1em;
   }
 }
