--- a/components/layout/components/hero-section.scss
+++ b/components/layout/components/hero-section.scss
@@ -19,23 +19,31 @@
   margin-top: $sp-md;
 }
 .hero-img {
-  width: 100%;
   pointer-events: none;
-
-  &:empty,
-  & > * {
-    min-height: 44.5vw;
-    object-fit: cover;
-
-    @media (min-width: 1200px) {
-      min-height: calc(44.5vw - $sp-xxl);
-    }
-  }
+  width: 100%;
 
   @media (min-width: 1200px) {
     max-width: calc(100% - #{$sp-xxl * 2});
     margin-left: auto;
     margin-right: auto;
+  }
+
+  &:empty,
+  & > * {
+    min-height: 33.25vw;
+    object-fit: cover;
+
+    @media (min-width: 1200px) {
+      min-height: calc(35vw - $sp-xxl);
+    }
+  }
+}
+.home-hero-section .hero-img:empty,
+.home-hero-section .hero-img > * {
+  min-height: 44.5vw;
+
+  @media (min-width: 1200px) {
+    min-height: calc(44.5vw - $sp-xxl);
   }
 }
 
