--- a/components/layout/components/footer.scss
+++ b/components/layout/components/footer.scss
@@ -1,11 +1,15 @@
 .footer {
   margin-top: 0;
-  padding-top: 40%;
+  padding-top: $sp-xxl;
   padding-bottom: 2.5rem;
+
+  @media (min-width: 600px) {
+    padding-top: 40%;
+  }
 }
 .footer-bg {
   @include absolute-expand;
-  object-fit: cover;
+  object-fit: contain;
   object-position: 50% 15%;
   z-index: -1;
 }
@@ -39,6 +43,18 @@
   }
 }
 
+.footer-logo {
+  padding: $sp-sm;
+
+  @media (min-width: 800px) {
+    top: -$sp-xxl;
+  }
+
+  @media (min-width: 1200px) {
+    top: -1.75rem;
+  }
+}
+
 .footer-row {
   @media (min-width: 800px) {
     display: flex;
@@ -54,7 +70,6 @@
 
     .footer-logo {
       @include absolute-horizontal-center;
-      margin-top: -1.25rem;
     }
   }
 }
