updates about page design; hides EPK page

--- a/components/_components.scss
+++ b/components/_components.scss
@@ -23,6 +23,7 @@
 @import "layout/components/show-item";
 @import "layout/components/quote-tile";
 @import "layout/components/quotes-section";
+@import "layout/components/sidebar-section";
 @import "layout/components/stat";
 @import "layout/components/stat-tile";
 @import "layout/components/stats-section";
