--- a/styles/3-layout/_layout.scss
+++ b/styles/3-layout/_layout.scss
@@ -14,3 +14,21 @@
     padding: $sp-xxl * 0.875 $sp-xxl;
   }
 }
+
+.bullet-list {
+  margin-bottom: $sp-xl * 1.5;
+  li {
+    padding-left: 1em;
+    margin-bottom: 0.5em;
+
+    &:before {
+      content: "•";
+      font-size: 1.5em;
+      color: $persian;
+      display: block;
+      position: absolute;
+      left: 0;
+      line-height: 1;
+    }
+  }
+}
