--- a/components/layout/components/shows-section.scss
+++ b/components/layout/components/shows-section.scss
@@ -7,6 +7,7 @@
 
   @media (min-width: 720px) {
     display: flex;
+    justify-content: center;
 
     .shows-section-title {
       margin-right: $sp-xxl;
